--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,7 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+section.css-2ri1te.e17x7z0o10 {
+    background-color: black;
+}
